# xarray-dataclasses

./: .buildinfo  .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  genindex.html  index.html  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  pyrightconfig.json  readme.html  search.html  searchindex.js
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: environment.pickle  index.doctree  readme.doctree
.doctrees/_apidoc/: xarray_dataclasses.common.doctree  xarray_dataclasses.dataarray.doctree  xarray_dataclasses.datamodel.doctree  xarray_dataclasses.dataoptions.doctree  xarray_dataclasses.dataset.doctree  xarray_dataclasses.doctree  xarray_dataclasses.typing.doctree  xarray_dataclasses.utils.doctree
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: docs.yaml  gh-pages.yml  pypi.yaml  pypi.yml  test.yml  tests.yaml  tests.yml
_apidoc/: xarray_dataclasses.common.html  xarray_dataclasses.dataarray.html  xarray_dataclasses.datamodel.html  xarray_dataclasses.dataoptions.html  xarray_dataclasses.dataset.html  xarray_dataclasses.html  xarray_dataclasses.typing.html  xarray_dataclasses.utils.html
_modules/: index.html
_modules/xarray_dataclasses/: common.html  dataarray.html  datamodel.html  dataoptions.html  dataset.html  utils.html
_sources/: index.md.txt  index.rst.txt  readme.rst.txt
_sources/_apidoc/: xarray_dataclasses.common.rst.txt  xarray_dataclasses.dataarray.rst.txt  xarray_dataclasses.datamodel.rst.txt  xarray_dataclasses.dataoptions.rst.txt  xarray_dataclasses.dataset.rst.txt  xarray_dataclasses.rst.txt  xarray_dataclasses.typing.rst.txt  xarray_dataclasses.utils.rst.txt
docs/: build  conf.py  index.rst
scripts/: docs  setup
tests/: test_bases.py  test_core_tagging.py  test_core_typing.py  test_data.py  test_dataarray.py  test_datamodel.py  test_dataset.py  test_dataset_extend_xarray.py  test_metadata.py  test_parser.py  test_specs.py  test_typing.py  test_v2_specs.py  test_v2_typing.py
xarray_dataclasses/: __init__.py  api.py  bases.py  common.py  core.py  dataarray.py  datamodel.py  dataoptions.py  dataset.py  deprecated.py  field.py  methods.py  parser.py  specs.py  typing.py  utils.py
xarray_dataclasses/core/: __init__.py  specs.py  tagging.py  typing.py
xarray_dataclasses/v2/: __init__.py  specs.py  typing.py
