[tool.poetry]
name = "xarray-dataclasses"
version = "1.8.0"
description = "xarray data creation by data classes"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
keywords = ["xarray", "dataclasses", "specifications", "typing"]
documentation = "https://astropenguin.github.io/xarray-dataclasses/"
repository = "https://github.com/astropenguin/xarray-dataclasses/"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
dataspecs = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8"
ipython = "^8.18"
myst-parser = "^3.0"
mypy = "^1.11"
pydata-sphinx-theme = "^0.15"
pyright = "^1.1"
pytest = "^8.3"
sphinx = "^7.4"

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
