[tool.poetry]
name = "xarray-dataclasses"
version = "1.9.1"
description = "xarray data creation by data classes"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
keywords = ["xarray", "dataclass", "dataarray", "dataset", "typing"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astropenguin/xarray-dataclasses/"
repository = "https://github.com/astropenguin/xarray-dataclasses/"
documentation = "https://astropenguin.github.io/xarray-dataclasses/"

[tool.poetry.dependencies]
python = ">=3.8, <3.14"
numpy = [
    { version = ">=1.22, <1.25", python = ">=3.8, <3.9" },
    { version = ">=1.22, <3.0", python = ">=3.9, <3.14" },
]
typing-extensions = "^4.0"
xarray = [
    { version = ">=2022.3, <2023.2", python = ">=3.8, <3.9" },
    { version = ">=2022.3, <2025.0", python = ">=3.9, <3.14" },
]

[tool.poetry.group.dev.dependencies]
black = "^24.4"
ipython = "^8.12"
myst-parser = "^3.0"
pydata-sphinx-theme = "^0.14"
pyright = "^1.1"
pytest = "^8.2"
sphinx = "^7.1"

[tool.pyright]
reportImportCycles = "warning"
reportUnknownArgumentType = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
