[project]
name = "xarray-dataclasses"
version = "2.0.0"
description = "xarray data creation by data classes"
readme = "README.md"
keywords = ["dataclasses", "specifications", "typing", "xarray"]
requires-python = ">=3.9,<3.14"
dependencies = ["dataspecs>=2.0,<3.0", "xarray>=2022.3,<2026.0"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "taniguchi.akio@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://astropenguin.github.io/xarray-dataclasses/v2.0.0"
repository = "https://github.com/astropenguin/xarray-dataclasses"

[dependency-groups]
dev = [
    "black>=24.8",
    "ipython>=8.18",
    "myst-parser>=3.0",
    "pydata-sphinx-theme>=0.16",
    "pyright>=1.1",
    "pytest>=8.3",
    "sphinx>=7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"
